syntax = "proto3";

package goal;

message Goal {
    int32 bank_account_id = 1;
    string created_at = 2;
    int32 value = 3;
}

message GetLastGoalRequest {
    int32 bank_account_id = 1;
}

message GoalResponse {
    Goal goal = 1;
}

message CreateGoalRequest {
    int32 bank_account_id = 1;
    int32 value = 2;
}

message CreateGoalResponse {
    enum Status {
        OK = 0;
        ALREADY_EXISTS = 1;
    }

    Status status = 1;
}
